[gd_scene load_steps=9 format=3 uid="uid://b8q7a23ar8a74"]

[ext_resource type="Script" uid="uid://yl6reo6alr04" path="res://scenes/main_menu/main_menu.gd" id="1_0ebjn"]
[ext_resource type="FontFile" uid="uid://cfmwj35m6m24q" path="res://assets/font/pixelFont-7-8x14-sproutLands.ttf" id="1_fsom3"]
[ext_resource type="Texture2D" uid="uid://denp4d4ehwnps" path="res://assets/background_PNGs/pixel_art_Early_20th_century_o (1).jpeg" id="2_ob46e"]
[ext_resource type="Theme" uid="uid://bg1ma7hebf0y2" path="res://assets/ui_theme/9_by_16 resolution_theme.tres" id="4_uqeha"]
[ext_resource type="AudioStream" uid="uid://b0dng14wche1b" path="res://assets/bgm/BGM.mp3" id="5_wem23"]
[ext_resource type="PackedScene" uid="uid://cedgx7yyue1ol" path="res://scenes/character_creation/character_creation.tscn" id="6_3ovsr"]
[ext_resource type="PackedScene" uid="uid://burh7luf5a1is" path="res://scenes/components/option_menu.tscn" id="7_5seab"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uqeha"]
atlas = ExtResource("2_ob46e")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ebjn")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_uqeha")

[node name="StartMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuContainer" type="MarginContainer" parent="StartMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="StartMenu/MenuContainer"]
visible = false
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Title" type="MarginContainer" parent="StartMenu/MenuContainer"]
layout_mode = 2

[node name="TitleContainer" type="Control" parent="StartMenu/MenuContainer/Title"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="StartMenu/MenuContainer/Title/TitleContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 260.0
grow_horizontal = 2
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("1_fsom3")
theme_override_font_sizes/font_size = 108
text = "Project 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButtonMargin" type="MarginContainer" parent="StartMenu/MenuContainer"]
layout_mode = 2
theme = ExtResource("4_uqeha")

[node name="MenuButtonContainer" type="Control" parent="StartMenu/MenuContainer/MenuButtonMargin"]
layout_mode = 2

[node name="BoxContainer" type="VBoxContainer" parent="StartMenu/MenuContainer/MenuButtonMargin/MenuButtonContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -68.0
offset_right = 46.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="NewGame" type="Button" parent="StartMenu/MenuContainer/MenuButtonMargin/MenuButtonContainer/BoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme = ExtResource("4_uqeha")
theme_type_variation = &"main_action_button"
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("1_fsom3")
theme_override_font_sizes/font_size = 36
text = "New Game"

[node name="Continue" type="Button" parent="StartMenu/MenuContainer/MenuButtonMargin/MenuButtonContainer/BoxContainer"]
visible = false
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_type_variation = &"main_action_button"
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("1_fsom3")
theme_override_font_sizes/font_size = 36
text = "Continue"

[node name="Options" type="Button" parent="StartMenu/MenuContainer/MenuButtonMargin/MenuButtonContainer/BoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_type_variation = &"main_action_button"
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("1_fsom3")
theme_override_font_sizes/font_size = 36
text = "Options"

[node name="Exit" type="Button" parent="StartMenu/MenuContainer/MenuButtonMargin/MenuButtonContainer/BoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_type_variation = &"main_action_button"
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("1_fsom3")
theme_override_font_sizes/font_size = 36
text = "Exit"

[node name="character_creation_menu" parent="." instance=ExtResource("6_3ovsr")]
visible = false
layout_mode = 1

[node name="OptionMenu" parent="." instance=ExtResource("7_5seab")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.5
offset_top = -100.5
offset_right = 84.5
offset_bottom = 100.5
grow_horizontal = 2
grow_vertical = 2

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wem23")
volume_db = 1.0
autoplay = true
parameters/looping = true

[connection signal="pressed" from="StartMenu/MenuContainer/MenuButtonMargin/MenuButtonContainer/BoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="StartMenu/MenuContainer/MenuButtonMargin/MenuButtonContainer/BoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="StartMenu/MenuContainer/MenuButtonMargin/MenuButtonContainer/BoxContainer/Exit" to="." method="_on_exit_pressed"]
